[project]
name = "coxireduxer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.3",
    "jupyter>=1.1.1",
    "llama-cpp-python>=0.3.13",
    "ollama>=0.5.1",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
]
